# sirens-parsing-haskell

./: LICENSE  README.md  sirens.cabal  stack.yaml
app/: Main.hs
resources/: sirens_fxt.txt
src/: Lib.hs
test/: Spec.hs
