name:                sirens
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/sirens#readme
license:             BSD3
license-file:        LICENSE
author:              Jérôme Mahuet
maintainer:          jerome.mahuet@gmail.com
copyright:           2015 Jérôme Mahuet
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , hashmap
                     , bytestring
  default-language:    Haskell2010

executable sirens-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , sirens
                     , bytestring
                     , hashmap
  default-language:    Haskell2010

test-suite sirens-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sirens
                     , hspec
                     , hashmap
                     , bytestring
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sirens
